Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

  - Run 'make manifest' on TravisCI before running release tests
  - No longer set AUTHOR_TESTING env variable on TravisCI because we don't
    check for that anymore
  - Add Perl 5.8 to .travis.yml
  - Run xt/release tests on TravisCI
  - Automatically create the .travis.yml file
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::TravisCI
  - Skip pod-no404s.t author tests during AUTOMATED_TESTING
  - Add .perltidyrc to the distribution
  - Moved xt/author/perlcriticrc to .perlcriticrc
  - No longer define a -profile for Test::Perl::Critic as the .perlcriticrc
    is now in the cwd

0.005  2017-08-26 18:55:22 UTC

  - A default Perl::Critic config file xt/author/perlcriticrc is created if
    none exists. Existing files are not changed
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta::JSON
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::DistManifest
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Kwalitee
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::MinimumVersion
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Mojibake
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::NoTabs
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Perl::Critic
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Pod
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Pod::No404s
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Portability::Files
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Spelling
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Version
  - Added Dist::Zilla::Role::Author::SKIRMESS::Test::XT
  - Added new modules to t/00-load.t
  - Added RemovePrereqs::Provided plugin
  - Added Test::CPAN::Meta release test