@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Perl::Tidy::RC
+  - Automatically create the .perltidyrc file
   - Run 'make manifest' on TravisCI before running release tests
   - No longer set AUTHOR_TESTING env variable on TravisCI because we don't
     check for that anymore
